added pending link

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 
 <body style="font-family:Monospace;">
+
+<a href="pending.html" title="pending">pending</a>
     
 <div role="main">
   <div class="section">
