--- a/pending.html
+++ b/pending.html
@@ -18,7 +18,7 @@
   <div class="section">
               
 <h1 id="quadratisch">Quadratisch</h1>
-<p><img alt="squares" src="quadratisch-20220512.mp4" /></p>
+<p><a title="squares" href="quadratisch-20220512.mp4" />quadratisch</a></p>
 <h2 id="exhibitions">Exhibitions</h2>
 <p>---</p>
 <p>---</p>
